--- a/MyfirstWebsite/page2.html
+++ b/MyfirstWebsite/page2.html
@@ -6,7 +6,7 @@
 		<a href="page1.html"> Page One </a>
 
 	<h1>Also a heading</h1>
-	<img src="images/Flower.jpg">
+	<img src="Images/Flower.jpg">
 	<p>This is a paragraph.</p>
 
 	</body>
